src/web/css/home.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');

* {
   margin: 0 0;
   padding: 0 0;
	 border: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
}

:root {
   --white: #FFFFFF;
   --black: #000000;
   --primary: #008037;
   --secondary: #E9EFF4;
}                      

.navBar {
   background-color: var(--secondary);
   height: 8vh;
   width: 100vw;
   display: grid;
   grid-template-columns: 9fr 0.5fr 0.6fr;
}

.line {
   background-color: var(--primary);
   height: 0.45vh;
   width: 100vw;
}

.title {
   display: inline-block;
   color: var(--black);
   font-size: 4.1vh;
   font-family: 'Fredoka One', cursive;
   margin-left: 2vw; 
   margin-top: 1.5vh;
   height: 6.45vh;
}

.title:hover {
   cursor: pointer;
}

.navButtons {
   display: inline-block;
   margin-top: 1vh;
   width: 6vh;
   height: 6vh;
   border-radius: 100%;
   background-color: var(--white);
   border: 0.32vh solid var(--primary);
}

.navButtons:hover {
   scale: 1.08;
   cursor: pointer;
}

.settingsIcon {
   font-size: 3.5vh;
   margin-top: 0.96vh;
   margin-left: 1vh;
}

#logoutIcon {
   margin-left: 1.2vh;
}

.classContainer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   justify-items: center;
   align-items: center;
}

.classes {
   width: 12vw;
   height: 19vh;
   margin-top: 8vh;
   background-color: var(--secondary);
   border: 0.32vh solid var(--primary);
   border-radius: 4%;
   font-size: 2.5vh;
   font-weight: 700;
   color: var(--black);
   text-align: center;
   padding-top: 7vh;
}

.classes:hover {
   scale: 1.09;
   cursor: pointer;
}

#addClass {
   position: relative;
   padding: 0;
}

#plus {
   width: 12vw;
   height: 19vh;
}

.plusV{
   display: inline-block;
   background-color: var(--black);
   width: 0.16vw;
   height: 9vh;
   margin-left: 0vw;
   margin-top: 4.9vh;
}

.plusH {
   display: inline-block;
   background-color: var(--black);
   width: 4.85vw;
   height: 0.3vh;
   position: absolute;
   top: 9.2vh;
   left: 3.5vw;
   z-index: 1;
}

.inputs {
   font-size: 2.5vh;
   width: 18vw;
   overflow: hidden;
   margin-top: 2.5vh;
   padding: 1vh 1.3vw;
   border: none;
   outline: none;
   border-bottom: 0.15vw solid var(--black);
   background-color: var(--secondary);
   color: var(--black);
}

.popUpTitle {
   font-size: 4vh;
   color: var(--black);
   font-weight: 700;
   margin-top: 2.3vh;
   white-space: nowrap;
}

.button {
   font-size: 2.5vh;
   font-weight: 600;
   width: 8vw;
   height: 5vh;
   padding: 0.6vh 1vw;
   margin-top: 4.6vh;
   color: var(--black);
   background-color: var(--white);
   border: 0.15vw solid var(--primary);
   border-radius: 6px;
   outline: none;
   overflow: hidden;
   white-space: nowrap;
}

.button:hover {
   transform: scale(1.06);
   cursor: pointer;
}

#code {
   display: inline-block;
   font-size: 2vh;
   font-weight: 700;
   margin-top: 3.5vh;
   border: none;
   outline: none;
   background-color: var(--secondary);
   color: var(--primary);
}



/* Animations */

.increaseSize {
   animation-name: increaseSize;
   animation-duration: 0.4s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: both;
}

@keyframes increaseSize {
   from {
      width: 12vw;
      height: 19vh;
   }
 
   to {
      width: 24vw;
      height: 29vh;
   }
}

.decreaseSize {
   animation-name: decreaseSize;
   animation-duration: 0.4s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: both;
}

@keyframes decreaseSize {
   from {
      width: 24vw;
      height: 29vh;
   }
 
   to {
      width: 12vw;
      height: 19vh;
   }
}

.zeroToFull {
   animation-name: zeroToFull;
   animation-duration: 0.6s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: both;
}

@keyframes zeroToFull {
   from {
      width: 0vw;
      height: 0vh;
   }
 
   to {
      width: 23vw;
      height: 28vh;
   }
}

.plusZeroToFull {
   animation-name: plusZeroToFull;
   animation-duration: 0.6s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: both;
}

@keyframes plusZeroToFull {
   from {
      width: 0vw;
      height: 0vh;
   }
 
   to {
      width: 12vw;
      height: 19vh;
   }
}

